--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
         <title>My awesome web page</title>
     </head>
 <img src="https://avatars.githubusercontent.com/u/103528606?v=4">
-
+< ol > 
+    < li > Esto </ li > 
+    < li > Es una </ li > 
+    < li > Lista ordenada </ li > 
+</ ol >
   <body>
     Hello there, awesome person! 
   </body>
-
+< ul > 
+    < li > Esto </ li > 
+    < li > Es una </ li > 
+    < li > Lista desordenada </ li > 
+</ ul >
 </html>
